# nats-client

./: .gitignore  README.md  nats-client.cabal  stack.yaml
benchmarks/: Bench.hs
src/Network/: Nats.hs
src/Network/Nats/: Builder.hs  Connection.hs  Logger.hs  Message.hs  Parser.hs  Subscriber.hs  Types.hs  Writer.hs
test/: Main.hs
test/Network/: NatsTests.hs
test/Network/Nats/: MessageProps.hs
tests/: Main.hs
tests/Network/: NatsTests.hs
tests/Network/Nats/: MessageProps.hs
