name:                nats-client
version:             0.1.0.0
synopsis:            Haskell client for NATS messaging system
-- description:         
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          kosmoskatten.software@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Network.Nats
                       Network.Nats.Message
                       Network.Nats.Parser
                       Network.Nats.Writer
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , aeson
                     , attoparsec
                     , bytestring
                     , conduit
                     , conduit-extra
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite nats-tests
  main-is:            Main.hs
  other-modules:      Network.Nats.MessageProps
  type:               exitcode-stdio-1.0
  build-depends:      base >= 4.8 && <4.9
                    , attoparsec
                    , bytestring
                    , nats-client
                    , test-framework
                    , test-framework-quickcheck2
                    , QuickCheck
  hs-source-dirs:     test
  default-language:   Haskell2010
  ghc-options:        -Wall
